# gameOfLife

./: CMakeLists.txt
.cache/clangd/index/: grid.cpp.52B1646449FB303F.idx  grid.cpp.991B8F1E7DC2DDDD.idx  grid.h.45C1B0613C46CE80.idx  grid.h.AF903527E9CF8369.idx  main.cpp.30E21656DB666003.idx  main.cpp.F9BC675EEFA27585.idx  simulation.cpp.13B820AF11F03403.idx  simulation.cpp.602EAE11DF5139DB.idx  simulation.h.3058A4829417FEA0.idx  simulation.h.B1C6A0A96B46000C.idx
src/: grid.cpp  grid.h  main.cpp  simulation.cpp  simulation.h  zoomingAndPanning.cpp  zoomingAndPanning.h
